[metadata]
name = Jitfs
author = Andrei Keis
author-email = andreikeis@users.noreply.github.com
url = https://github.com/andreikeis/jitfs

[entry_points]
console_scripts =
	jitfs=jitfs.console:run

[flake8]
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,build,dist,scripts,docs,*.egg,.tox
ignore=E731,E241,
